Add Firebase push notifications
